# node-webp

./: .gitignore  Cargo.toml  README.md  common.ts.bk  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: bytes_to_webp.rs  lib.rs  read_image.rs  webp.rs
