[package]
edition = "2021"
name = "node-webp"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.4.3", default-features = false, features = ["napi4"] }
napi-derive = "2.4.1"
webp = "0.2"
image = "0.24.2"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
